--- a/sec-1-introduction.tex
+++ b/sec-1-introduction.tex
@@ -47,8 +47,8 @@ performance. To be practicable, the GPU programming model must efficiently
 support messy boundary conditions, irregular data and control flow patterns, and
 provide an elegant mapping from the application to the underling architecture,
 without forcing the programmer to recast their algorithm. Support for nested
-data parallelism \cite{Blelloch:1994,Blelloch:1996} (NDP) would provide a first
-step towards a viable GPU programming model, unshackling vast computational
-resources from the small application niche for which they were originally
-designed.
+data parallelism \cite{Blelloch:1994vc,Blelloch:1996jx} (NDP) would provide a
+first step towards a viable GPU programming model, unshackling vast
+computational resources from the small application niche for which they were
+originally designed.
 
