--- a/sec-1-introduction.tex
+++ b/sec-1-introduction.tex
@@ -18,8 +18,8 @@ in general purpose workloads, and the physical limitations of power dissipation
 for integrated circuits. The additional millions and billions of transistors
 afforded by Moore's Rule\footnote{Moore's actual prediction in 1965 referred
 only to the number of devices that could be fabricated on a single die, and that
-this quantity would increase by fifty percent each year \cite{Moore:1965}.} are
-simply not very productive in increasing the performance of single--threaded
+this quantity would increase by fifty percent each year \cite{Moore:1965wc}.}
+are simply not very productive in increasing the performance of single--threaded
 code.
 
 At the same time, the commodity \indexe{graphics processing unit} (GPU) has been
