--- a/sec-3-design.tex
+++ b/sec-3-design.tex
@@ -1,3 +1,12 @@
+%
+% sec-3-design.tex
+%
+% Embedded languages, stratified types, richly typed terms, representing
+% programs. The Accelerate language.
+%
+% Accelerate CUDA backend. Code generation. Executing computations. Garbage
+% collection. Caching.
+%
 
 \chapter{Design}
 \epigraph{You see a wile, you thwart. Am I right?}%
@@ -9,6 +18,8 @@
             \item using the type system to exclude nesting
             \item richly typed terms; environments \& types
             \item types $\Rightarrow$ correctness??
+            \item surface \& internal (core) languages
+            \item representing different constructs (c.f. nesting?)
         \end{itemize}
 
     \item Related work, why it sucks
