--- a/sec-4-implementation.tex
+++ b/sec-4-implementation.tex
@@ -1,3 +1,12 @@
+%
+% sec-4-implementation.tex
+%
+% Optimisation via program transformation
+%  - renaming & substitution
+%  - array fusion
+%  - selective optimisation (??)
+%  - program correctness
+%
 
 \chapter{Implementation}
 \epigraph{The trouble with opportunity is that it always comes disguised as hard work.}%
